[project]
name = "python-program"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "black>=25.1.0",
    "bs4>=0.0.2",
    "cryptography>=45.0.5",
    "dask>=2025.5.1",
    "fastapi>=0.116.0",
    "flask>=3.1.1",
    "gradio>=5.36.2",
    "matplotlib>=3.10.3",
    "modelscope>=1.28.0",
    "moviepy>=2.2.1",
    "numpy>=2.3.1",
    "openai>=1.93.3",
    "opencv-python>=4.11.0.86",
    "openpyxl>=3.1.5",
    "pandas>=2.3.1",
    "pendulum>=3.1.0",
    "pillow>=11.3.0",
    "polars>=1.31.0",
    "pytest>=8.4.1",
    "python-dotenv>=1.1.1",
    "requests>=2.32.4",
    "rich>=14.0.0",
    "scikit-learn>=1.7.0",
    "scipy>=1.16.0",
    "seaborn>=0.13.2",
    "tqdm>=4.67.1",
    "urllib3>=2.5.0",
]

[[tool.uv.index]]
url = "https://pypi.tuna.tsinghua.edu.cn/simple"
default = true
